<resources>
    <string name="app_name">KABA</string>
    <string name="channel_name">Kaba channel.</string>
    <string name="channel_description">Kaba Application notification channel.</string>
    <string name="title_home">Home</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_shopping_card">Cart</string>
    <string name="title_command_list">Commands</string>
    <string name="title_myaccount">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_message_box">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name_sample">CASTAS</string>
    <string name="title_activity_menu_content">MenuContent</string>
    <string name="title_activity_restaurant_menu">Restaurant Menu</string>
    <string name="restaurant_adress_sample">Kégué, 100m away from Stadium</string>
    <string name="restaurant_contact_sample">0022890909090</string>
    <string name="menu_food_item_name_sample">HAMBURGER STEAK</string>
    <string name="menu_food_item_price_sample">1500FCFA</string>
    <string name="title_activity_food_details"></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="food_tag_sample">CROISSANT</string>
    <string name="drink_name_sample">COCA</string>
    <string name="action_share">Share</string>
    <string name="there_is_no_food">No food in the Menu</string>
    <string name="restaurant">RESTAURANT</string>
    <string name="update_done">UPDATE FINISHED</string>
    <string name="update_no_needed">UPDATE NOT NEEDED</string>
    <string name="network_error">Network Error. Press the Button to try again</string>
    <string name="try_again">Try Again Please</string>
    <string name="sys_error">Sorry for the disconvenience, The server is encountering an Error.</string>
    <string name="title_activity_web">WEBACTIVITY</string>
    <string name="title_activity_geo">GEOACTIVITY</string>
    <string name="total">TOTAL:</string>
    <string name="article_title_sample">Comment faire une bonne tisane?</string>
    <string name="article_details_sample">2 tubercules de Gingembre + Kpatima, when a user tries to pick up one of cards... 2 tubercules de Gingembre + Kpatima, when a user tries to pick up one of cards</string>
    <string name="scanner_activity">Scan</string>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="months_of_year">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_login">LOGIN</string>
    <string name="register_activity">REGISTER</string>
    <string name="register_account">REGISTER AN ACCOUNT</string>
    <string name="register">Next</string>
    <string name="confirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">CONNEXION</string>
    <string name="i_login">I Login</string>
    <string name="title_activity_service_client">ServiceClient</string>
    <string name="service_client">CUSTOMER SERVICE</string>
    <string name="call_customers">"CALL \nCUSTOMER \nSERVICE"</string>
    <string name="sav_name">Client Name</string>
    <string name="sav_type_ur_message">Type your message please</string>
    <string name="title_activity_my_adresses">MyAdresses</string>
    <string name="my_adresses">MY ADDRESSES</string>
    <string name="home">Maison Agoè</string>
    <string name="details_adress_sample">Exemple: Deuxième rond point en venant d\'Opéra vers QueenStore.</string>
    <string name="details_adress_country">Lomé (TOGO)</string>
    <string name="title_activity_edit_address">EditAddress</string>
    <string name="sav_location_name">Name Of Location</string>
    <string name="add_country">Country</string>
    <string name="add_city">City</string>
    <string name="add_qte">District</string>
    <string name="add_details">Addresses details</string>
    <string name="add_phone">Phone number</string>
    <string name="cancel">CANCEL</string>
    <string name="save">Save</string>
    <string name="sav_call">CALL</string>
    <string name="sav_service">SERVICE</string>
    <string name="sav_customer">CUSTOMER</string>
    <string name="action_add_address">ADD</string>
    <string name="add_gps_address">ADD GPS LOCATION</string>
    <string name="this_is_location">This is your current location</string>
    <string name="title_activity_personnal_info">Me</string>
    <string name="your_name">Full Name</string>
    <string name="your_nick_name">Your name</string>
    <string name="your_gender">Gender</string>
    <string name="your_birth_date">Birth Date</string>
    <string name="title_activity_feed">NewsFeed</string>
    <string name="my_news_feed">NEWSFEED</string>
    <string name="add_remove_favorite">+- Favorite</string>
    <string name="i_register">Register</string>
    <string name="select_your_delivery_position">Select Position</string>
    <string name="ed_code">Code</string>
    <string name="send_verification_code">Code</string>
    <string name="please_enter_transaction_phone">Entrez le numéro avec lequel vous être susceptibles d\'effectuer des transaction T-Money ou Flooz.\n\nSeuls les numéro du TOGO sont autorisés.</string>
    <string name="code_de_confirmation">Cliquez sur Code. \nEntrez le code de confirmation.</string>
    <string name="phone_number_hint">90 XX XX XX</string>
    <string name="forgot_password">Mot de Passe Oublié ?</string>
    <string name="add_non_loin">Not so far from</string>
    <string name="non_loin_adress_sample">Bar / Pharmacie / Hotel</string>
</resources>