<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.FoodDetails.FoodDetailsActivity">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:name="@string/action_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_star_white_transparent_24dp"
        android:title="@string/add_remove_favorite" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:name="@string/action_share"
        app:showAsAction="never"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:name="@string/action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
