<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserAuth.register.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

        <TextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            style="@style/TextStyle.LoginTitle"
            android:hint="@string/register_account"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center_horizontal"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/please_enter_transaction_phone"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            style="@style/TextStyle.LoginField"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:drawablePadding="15dp"
            android:maxLength="@integer/togo_phone_length"
            android:hint="@string/phone_number_hint"
            android:inputType="number"
            android:text=""
            />

        <EditText
            android:id="@+id/ed_nickname"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            style="@style/TextStyle.LoginField"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/your_nick_name"
            android:inputType="text"
            android:drawablePadding="15dp"
            />


      <!--  <EditText
            android:id="@+id/ed_passwd"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            style="@style/TextStyle.LoginField"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            />
        <EditText
            android:id="@+id/ed_confirm_passwd"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            style="@style/TextStyle.LoginField"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            />-->


        <TextView
            android:gravity="center_horizontal"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/code_de_confirmation"
            android:textSize="12sp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_half"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <LinearLayout
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp">

            <EditText
                android:id="@+id/ed_code"
                style="@style/TextStyle.LoginField.WithNoMargintop"
                android:layout_width="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:hint="@string/ed_code"
                android:layout_height="40dp"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="false"
                android:singleLine="false" />

            <!--   <EditText
                   android:id="@+id/ed_nickndame"
                   android:layout_gravity="center_horizontal"
                   android:gravity="center_vertical|left"
                   style="@style/TextStyle.LoginField"
                   android:layout_width="wrap_content"
                   android:layout_height="40dp"
                   android:hint="@string/your_nick_name"
                   android:inputType="text"
                   android:drawablePadding="15dp"
                   />-->

            <Button
                android:id="@+id/bt_send_code"
                style="@style/AppTheme.Button.Cancel"
                android:text="@string/send_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_cornered"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_marginTop="@dimen/activity_horizontal_margin_4_3"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:layout_width="100dp"
            android:background="@drawable/bt_yellow_rounded"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>