<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserAcc.adresses.EditAddressActivity"
    tools:showIn="@layout/activity_edit_address">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/rc_address_images"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:text="@string/sav_location_name"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:textSize="@dimen/personnal_info_title_text_size"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/ed_title_of_location"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/personnal_info_content_text_size"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:textCursorDrawable="@drawable/edit_black_drawable"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/edittext_margintop_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:text="@string/add_phone"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:textSize="@dimen/personnal_info_title_text_size"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/ed_phone_number"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/personnal_info_content_text_size"
                android:inputType="phone"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:textCursorDrawable="@drawable/edit_black_drawable"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>


        <RelativeLayout
            android:layout_marginTop="@dimen/edittext_margintop_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_select_address"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin_half"
                android:textColor="@color/white"
                android:text="@string/select_your_delivery_position"
                android:textSize="@dimen/editadress_textsize"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:gravity="left|center_vertical"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                app:srcCompat="@drawable/ic_chevron_right_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/lny_pick_address"
            android:layout_marginTop="@dimen/edittext_margintop_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:text="@string/add_qte"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:textSize="@dimen/personnal_info_title_text_size"
                android:background="?selectableItemBackground"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_address_quartier"
                android:background="?selectableItemBackground"
                android:textColor="@color/black"
                android:textSize="@dimen/personnal_info_content_text_size"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <!-- non loin de -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/edittext_margintop_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/add_non_loin"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:textSize="@dimen/personnal_info_title_text_size"
                android:layout_height="wrap_content" />

            <!-- donner des inforamtions sur le details -->

            <EditText
                android:id="@+id/ed_address_non_loin"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/personnal_info_content_text_size"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:hint="@string/non_loin_adress_sample"
                android:textCursorDrawable="@drawable/edit_black_drawable"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/edittext_margintop_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:text="@string/add_details"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:textSize="@dimen/personnal_info_title_text_size"
                android:layout_height="wrap_content" />

        <!-- donner des inforamtions sur le details -->

            <EditText
                android:id="@+id/ed_address_details"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/personnal_info_content_text_size"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:hint="@string/details_adress_sample"
                android:textCursorDrawable="@drawable/edit_black_drawable"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/edittext_margintop_24"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="@style/AppTheme.Button.Cancel"
                android:text="@string/cancel"
                android:onClick="exitActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_cornered"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/bt_confirm"
                style="@style/AppTheme.Button.Confirm"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:background="@drawable/bg_red_cornered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
